force-app/main/default/objects/Account/fields/AccountingPeriod__c.field-meta.xml
<CustomField>
    <fullName>AccountingPeriod__c</fullName>
    <label>Accounting Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>