force-app/main/default/objects/Account/fields/AssetAmount__c.field-meta.xml
<CustomField>
    <fullName>AssetAmount__c</fullName>
    <label>Asset Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>