force-app/main/default/objects/Account/fields/CustomField__c.field-meta.xml
<CustomField>
    <fullName>CustomField__c</fullName>
    <label>CustomField</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>