force-app/main/default/objects/Account/fields/ExemptOrgStatus__c.field-meta.xml
<CustomField>
    <fullName>ExemptOrgStatus__c</fullName>
    <label>Exempt Org Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>