force-app/main/default/objects/Account/fields/IncomeAmount__c.field-meta.xml
<CustomField>
    <fullName>IncomeAmount__c</fullName>
    <label>Income Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>