force-app/main/default/objects/Account/fields/IRSClassification__c.field-meta.xml
<CustomField>
    <fullName>IRSClassification__c</fullName>
    <label>IRS Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>