force-app/main/default/objects/Account/fields/MinutesSpent__c.field-meta.xml
<CustomField>
    <fullName>MinutesSpent__c</fullName>
    <label>Minutes Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>