force-app/main/default/objects/Account/fields/RulingDate__c.field-meta.xml
<CustomField>
    <fullName>RulingDate__c</fullName>
    <label>Ruling Date</label>
    <type>Date</type>
</CustomField>